fix(agent): support JDK 8 runtime